<resources>
    <string name="app_name">KeaBank</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Logout">Logout</string>
    <string name="Delete_acount">Delete Account</string>
    <string name="Create_Account">Create an account</string>
    <string name="select_account">Select an account</string>
    <string name="insert_balance">Insert your balance:</string>
    <string name="kr" translatable="false">kr.</string>
    <string name="delete_user">Delete User Account</string>
    <string name="your_accounts">Your Accounts</string>
    <string name="homepage">Home</string>
    <string name="check_accountslist">See your accounts</string>
    <string name="delete_account">Delete account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="go_login">Go to login</string>
    <string name="send_password">Send new password</string>
    <string name="display_balance">Your balance:</string>
    <string name="add_val">Insert money</string>
    <string name="transfer_val">Transfer money</string>
    <string name="withdraw_val">Withdraw money</string>
    <string name="have_to_insert">Please insert something</string>
    <string name="register_success">You´re now register successfully</string>
    <string name="how_much">How much would you like to transfer</string>
    <string name="select_who_transfer">Write email and select the account you want to transfer to:</string>
    <string name="transfer_complete">Transfer Complete</string>
    <string name="in_progress">In progress</string>
    <string name="textHid_insert">Insert the value you want to your account:</string>
    <string name="textHid_withdraw">How much would you like to withdraw:</string>
    <string name="edit_age">Age</string>
    <string name="welcome_signup">When you sign up you will get 100 kr. to your Default and Budget account as free service for choosing KeaBank.</string>
    <string name="not_old_enough">You are not old enough</string>
    <string name="suc_withdraw_val">You successfully withdraw money</string>
    <string name="suc_insert_val">You successfully inserted money</string>
    <string name="not_enough_val">You don´t have enough money on account, too poor!</string>
    <string name="doesnt_exist_email">The email doesn´st exist</string>
    <string name="check_bills">Check your bills</string>
    <string name="show_cur_bal">Show current balance</string>
    <string name="show">Show</string>
    <string name="verify_transfer">Please verify this transfer.</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="verify_wrong_login">Sorry, wrong login</string>
    <string name="your_bills">Your bills</string>
    <string name="Create_bill">Create a bill</string>
    <string name="insert_how_much_to_pay">Insert how much to pay:</string>
    <string name="insert_name_on_bill">Insert name on bill:</string>
    <string name="name">Name</string>
    <string name="suc_register_account">Your account is register</string>
    <string name="suc_bill_register">Your bill is register</string>
    <string name="want_to_delete">Do you want to delete this bill</string>
    <string name="delete_bill">Delete bill</string>
    <string name="total">Total:</string>
    <string name="status">Status:</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="pay_now">Pay now</string>
    <string name="auto_pay">Auto pay</string>
    <string name="confirm">Confirm</string>
    <string name="already_paid">It is already been paid!</string>
    <string name="suc_pay_bill">The bill was paid successfully</string>
    <string name="select_date_pay">Select a month where your bill will be paid from your Default account:</string>
    <string name="suc_set_date_bill">You have now set a date for payment</string>
    <string name="suc_auto_pay">Your bill is now pay by date</string>
    <string name="receiver_email">Receiver email:</string>
    <string name="receiver_account">Receiver account:</string>
</resources>
