<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    tools:context=".Activities.Views.ViewBillActivity">

    <TextView
        android:id="@+id/textViewBillTitle"
        android:layout_width="142dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBillTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="260dp"
        android:layout_marginRight="260dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBillCurrentVal"
        android:layout_width="159dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/textKrVA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBillTotal" />

    <TextView
        android:id="@+id/textKrVA"
        android:layout_width="42dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="140dp"
        android:text="@string/kr"
        app:layout_constraintStart_toEndOf="@+id/textBillCurrentVal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBillCurrentVal" />

    <TextView
        android:id="@+id/textViewsStatusVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:text="@string/not_paid"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textViewStatus"
        app:layout_constraintTop_toBottomOf="@+id/textBillCurrentVal" />

    <Button
        android:id="@+id/butPayBillNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/pay_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewsStatusVal" />

    <Button
        android:id="@+id/butAutoPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/auto_pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butPayBillNow" />

    <ScrollView
        android:id="@+id/HiddenScrollBill"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/butAutoPay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textSelectAccountHidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_account"
                android:textSize="28sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinnerAccountToPayBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textSelectDateHidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_date_pay"
                android:textSize="28sp"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinnerMonthToPayBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/butConfirmPayBillNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:visibility="gone" />

            <Button
                android:id="@+id/butConfirmPayBillAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:visibility="gone" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>